--- a/search.html
+++ b/search.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/svg+xml" href="icons/icons8-logo-500.svg" />
+    <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Auraly" />
+    <link rel="apple-touch-icon" href="icons/icons8-logo-500.svg" />
     <title>Auraly</title>
   </head>
   <body>
@@ -1014,6 +1020,38 @@
           }
         }
       }
+
+      // Register service worker
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker
+            .register("/sw.js")
+            .then((registration) => {
+              console.log("ServiceWorker registration successful");
+            })
+            .catch((err) => {
+              console.log("ServiceWorker registration failed: ", err);
+            });
+        });
+      }
+
+      // Add to home screen prompt
+      let deferredPrompt;
+      window.addEventListener("beforeinstallprompt", (e) => {
+        e.preventDefault();
+        deferredPrompt = e;
+
+        // Show install prompt when appropriate
+        // For example, you could add an "Install App" button to your UI
+        // When clicked, call:
+        // deferredPrompt.prompt();
+        // deferredPrompt.userChoice.then((choiceResult) => {
+        //     if (choiceResult.outcome === 'accepted') {
+        //         console.log('User accepted the install prompt');
+        //     }
+        //     deferredPrompt = null;
+        // });
+      });
     </script>
     <!-- Update the song details panel HTML structure -->
     <div class="song-details-panel" id="songDetailsPanel">
