--- a/auraly.html
+++ b/auraly.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Auraly - Your AI Music Companion</title>
+    <link rel="stylesheet" href="shared.css" />
     <link rel="stylesheet" href="auraly.css" />
     <link rel="icon" type="image/svg+xml" href="icons/adaptive-favicon.svg" />
     <link
@@ -14,186 +15,316 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
   </head>
   <body>
     <nav class="navbar">
       <div class="nav-logo">
-        <img
-          src="icons/icons8-logo-500.svg"
-          alt="Auraly Logo"
-          width="40"
-          height="40"
-        />
-        <span>Auraly</span>
+        <a href="auraly.html">
+          <img
+            src="icons/icons8-logo-500.svg"
+            alt="Auraly Logo"
+            class="logo-icon"
+          />
+          <span class="logo-text">Auraly</span>
+        </a>
       </div>
       <div class="hamburger">
         <span></span>
         <span></span>
         <span></span>
       </div>
-      <div class="nav-links">
-        <a href="#features">Features</a>
-        <a href="#about">About</a>
-      </div>
     </nav>
 
     <header class="hero">
-      <div class="hero-content" data-aos="fade-up" data-aos-duration="800">
-        <h1>Experience Music Like Never Before</h1>
-        <p>
-          Discover, stream, and enjoy your favorite music with Auraly's
-          intelligent music player.
+      <div class="hero-content">
+        <h1 data-aos="fade-up">Experience Music with Elegance</h1>
+        <p class="hero-main" data-aos="fade-up" data-aos-delay="100">
+          Discover a beautifully crafted interface where music meets design.
+          Search and explore your favorite tracks with unprecedented ease and
+          style.
         </p>
-        <p class="tip">Try the web version now -!</p>
-        <div class="cta-buttons">
+        <div class="availability-info" data-aos="fade-up" data-aos-delay="150">
+          <p class="coming-soon">
+            <span class="badge">Coming Soon</span>
+            Official mobile app in development
+          </p>
+          <p class="web-app-note">
+            Meanwhile, enjoy Auraly as a web app on your desktop or add to your
+            Android home screen for a native-like experience
+          </p>
+        </div>
+        <div class="cta-buttons" data-aos="fade-up" data-aos-delay="200">
           <a
             href="https://123nt.github.io/auraly-app/search.html"
             class="cta-button web-btn"
             target="_blank"
             rel="noopener"
           >
-            <svg width="20" height="20" viewBox="0 0 24 24">
-              <circle
-                cx="12"
-                cy="12"
-                r="10"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-              />
-              <path
-                d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-              />
-            </svg>
             Try Web Version
+            <svg
+              width="20"
+              height="20"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+            >
+              <path d="M5 12h14M12 5l7 7-7 7" />
+            </svg>
           </a>
         </div>
-        <p class="coming-soon">Mobile app coming soon!</p>
       </div>
-      <div class="hero-image" data-aos="fade-left" data-aos-duration="800">
+      <div class="hero-image" data-aos="zoom-in" data-aos-delay="200">
         <img
-          src="app scrennshots/Neutral Beige Aesthetic Fashion Mockup Instagram Story.png"
-          alt="Auraly App Preview"
-          width="300"
-          height="600"
+          src="/app scrennshots/Neutral Beige Aesthetic Fashion Mockup Instagram Story.png"
+          alt="Auraly App Interface"
           loading="lazy"
         />
       </div>
     </header>
 
     <section id="features" class="features">
-      <h2 data-aos="fade-up" data-aos-duration="600">Why Choose Auraly?</h2>
+      <div class="section-header">
+        <h2 data-aos="fade-up">Why Choose Auraly?</h2>
+        <p data-aos="fade-up" data-aos-delay="100">
+          Experience music without interruptions, just the way you love it
+        </p>
+      </div>
       <div class="feature-grid">
-        <div
-          class="feature-card"
-          data-aos="fade-up"
-          data-aos-duration="600"
-          data-aos-delay="100"
-        >
-          <div class="feature-icon">🎵</div>
-          <h3>Creator's Collection</h3>
-          <p>Handpicked playlists of favorite songs.</p>
+        <div class="feature-card" data-aos="fade-up">
+          <div class="feature-icon">✨</div>
+          <h3>Beautiful Interface</h3>
+          <p>
+            Clean and modern design that makes music discovery a delightful
+            experience
+          </p>
         </div>
-        <div
-          class="feature-card"
-          data-aos="fade-up"
-          data-aos-duration="600"
-          data-aos-delay="200"
-        >
-          <div class="feature-icon">🎨</div>
-          <h3>Dynamic Themes</h3>
-          <p>Beautiful color schemes that adapt to your music.</p>
+        <div class="feature-card" data-aos="fade-up" data-aos-delay="100">
+          <div class="feature-icon">🚫</div>
+          <h3>Ad-Free Experience</h3>
+          <p>
+            No interruptions, no ads - just pure, uninterrupted music enjoyment
+          </p>
         </div>
-        <div
-          class="feature-card"
-          data-aos="fade-up"
-          data-aos-duration="600"
-          data-aos-delay="300"
-        >
-          <div class="feature-icon">🔍</div>
-          <h3>Smart Search</h3>
-          <p>Find songs instantly with advanced search.</p>
+        <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
+          <div class="feature-icon">🔄</div>
+          <h3>Weekly Updates</h3>
+          <p>
+            Fresh features and improvements every week to enhance your music
+            journey
+          </p>
+        </div>
+        <div class="feature-card" data-aos="fade-up" data-aos-delay="300">
+          <div class="feature-icon">💫</div>
+          <h3>Easy to Use</h3>
+          <p>
+            Intuitive interface that makes finding and playing music effortless
+          </p>
+        </div>
+        <div class="feature-card" data-aos="fade-up" data-aos-delay="400">
+          <div class="feature-icon">🔒</div>
+          <h3>No Information Collection</h3>
+          <p>
+            Your privacy matters - we don't collect any personal data or
+            tracking information
+          </p>
+        </div>
+        <div class="feature-card" data-aos="fade-up" data-aos-delay="500">
+          <div class="feature-icon">🌐</div>
+          <h3>Enjoy Anywhere</h3>
+          <p>
+            Access your music from any device, anywhere - perfect for home,
+            work, or on the go
+          </p>
         </div>
       </div>
     </section>
 
     <section id="about" class="about">
-      <div class="about-content" data-aos="fade-up" data-aos-duration="600">
-        <h2>About Auraly</h2>
-        <p>
-          Your personal music companion that understands your taste and helps
-          you discover new music. Experience a beautiful interface designed for
-          music lovers.
+      <div class="about-content">
+        <h2 data-aos="fade-up">About Auraly</h2>
+        <p data-aos="fade-up" data-aos-delay="100">
+          We're passionate about creating the perfect music discovery
+          experience. Our AI-powered platform is designed to understand your
+          unique taste and connect you with the music you'll love. Join us in
+          revolutionizing how people discover and enjoy music.
+        </p>
+        <div class="cta-section" style="text-align: center" data-aos="fade-up">
+          <a
+            href="https://123nt.github.io/auraly-app/search.html"
+            class="cta-button web-btn"
+            target="_blank"
+            rel="noopener"
+          >
+            Try Web Version
+            <svg
+              width="20"
+              height="20"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+            >
+              <path d="M5 12h14M12 5l7 7-7 7" />
+            </svg>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <section id="privacy-terms" class="privacy-terms">
+      <div class="section-header">
+        <h2 data-aos="fade-up">Privacy and Terms</h2>
+        <p data-aos="fade-up" data-aos-delay="100">
+          We prioritize your trust and transparency
         </p>
       </div>
-    </section>
-
-    <section id="app-preview" class="app-showcase">
-      <h2 data-aos="fade-up" data-aos-duration="600">Preview Auraly</h2>
-      <div class="showcase-grid">
-        <div
-          class="showcase-item"
-          data-aos="fade-up"
-          data-aos-duration="600"
-          data-aos-delay="100"
-        >
-          <img
-            src="app scrennshots/Neutral Minimal Shadow Photographer Frame Mockup Pinterest Pin (3).png"
-            alt="Auraly Interface"
-            width="250"
-            height="400"
-            loading="lazy"
-          />
-          <h3>Beautiful Interface</h3>
-          <p>Clean and intuitive design.</p>
+      <div class="privacy-terms-content">
+        <div class="privacy-card" data-aos="fade-up">
+          <div class="privacy-icon">🔒</div>
+          <h3>Data Privacy</h3>
+          <p>
+            We do not collect, store, or share any personal user data. Your
+            music preferences and search history remain completely private.
+          </p>
         </div>
-        <div
-          class="showcase-item"
-          data-aos="fade-up"
-          data-aos-duration="600"
-          data-aos-delay="200"
-        >
-          <img
-            src="app scrennshots/Neutral Minimal Shadow Photographer Frame Mockup Pinterest Pin (2).png"
-            alt="Search Feature"
-            width="250"
-            height="400"
-            loading="lazy"
-          />
-          <h3>Quick Search</h3>
-          <p>Find music instantly.</p>
+        <div class="privacy-card" data-aos="fade-up" data-aos-delay="100">
+          <div class="privacy-icon">📜</div>
+          <h3>Terms of Use</h3>
+          <p>
+            Auraly is a free music discovery platform. By using our service, you
+            agree to respect copyright laws and use the platform responsibly.
+          </p>
+        </div>
+        <div class="privacy-card" data-aos="fade-up" data-aos-delay="200">
+          <div class="privacy-icon">🎵</div>
+          <h3>For Music Lovers</h3>
+          <p>
+            This project is for all the music and interface lovers. We celebrate
+            the art of music discovery and elegant design, creating an
+            experience that resonates with true music enthusiasts.
+          </p>
+        </div>
+      </div>
+      <div class="privacy-links" data-aos="fade-up" data-aos-delay="300">
+        <button class="privacy-link" id="privacyToggle">
+          Full Privacy Policy
+        </button>
+        <button class="terms-link" id="termsToggle">
+          Complete Terms of Service
+        </button>
+      </div>
+      <div id="privacyDetails" class="details-section">
+        <div class="details-content">
+          <h3>Auraly Privacy Policy</h3>
+          <p>
+            At Auraly, we are committed to protecting your privacy. Here are key
+            points of our privacy policy:
+          </p>
+          <ul>
+            <li>We do not collect or store any personal user data</li>
+            <li>
+              Your music preferences and search history remain completely
+              private
+            </li>
+            <li>No tracking or third-party data sharing</li>
+            <li>We use only essential cookies for website functionality</li>
+          </ul>
+          <p>
+            For the complete and most up-to-date privacy policy, please contact
+            us directly.
+          </p>
+        </div>
+      </div>
+      <div id="termsDetails" class="details-section">
+        <div class="details-content">
+          <h3>Auraly Terms of Service</h3>
+          <p>By using Auraly, you agree to the following terms:</p>
+          <ul>
+            <li>Use the platform responsibly and ethically</li>
+            <li>Respect copyright and intellectual property rights</li>
+            <li>Do not use the service for illegal activities</li>
+            <li>Auraly reserves the right to modify or discontinue service</li>
+          </ul>
+          <p>
+            These terms are subject to change. Please check regularly for
+            updates.
+          </p>
         </div>
       </div>
     </section>
 
-    <footer>
-      <div class="footer-content">
-        <div class="footer-logo">
-          <img
-            src="icons/icons8-logo-50.svg"
-            alt="Auraly Logo"
-            width="30"
-            height="30"
-          />
-          <span>Auraly</span>
-        </div>
-        <div class="footer-links">
-          <a href="privacy.html">Privacy</a>
-          <a href="terms.html">Terms</a>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-nav-section">
+            <h4>Quick Links</h4>
+            <nav class="footer-nav">
+              <ul>
+                <li><a href="auraly.html">Home</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#about">About</a></li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="footer-contact-section">
+            <h4>Connect</h4>
+            <div class="footer-social">
+              <a
+                href="https://twitter.com/auraly_app"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Twitter"
+              >
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a
+                href="https://github.com/auraly"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="GitHub"
+              >
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="mailto:contact@auraly.com" aria-label="Email">
+                <i class="fas fa-envelope"></i>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2024 Auraly</p>
+        <p>&copy; 2024 Auraly. All rights reserved.</p>
       </div>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
+      function showInstallGuide() {
+        alert(`How to Install Auraly as a Web App:
+
+Desktop:
+1. Open Chrome or Edge browser
+2. Visit the Auraly website
+3. Click the install icon (⊕) in the address bar
+4. Follow the prompts to install
+
+Android:
+1. Open Chrome browser
+2. Visit the Auraly website
+3. Tap the three dots menu (⋮)
+4. Select "Add to Home screen"
+5. Follow the prompts to install
+
+The web app will then appear on your home screen for quick access!`);
+      }
+
+      // Initialize AOS
       AOS.init({
-        duration: 600,
+        duration: 800,
         once: true,
         offset: 100,
       });
@@ -213,6 +344,20 @@
             navLinks.classList.remove("active");
           });
         });
+      });
+    </script>
+    <script>
+      const privacyToggle = document.getElementById("privacyToggle");
+      const termsToggle = document.getElementById("termsToggle");
+      const privacyDetails = document.getElementById("privacyDetails");
+      const termsDetails = document.getElementById("termsDetails");
+
+      privacyToggle.addEventListener("click", () => {
+        privacyDetails.classList.toggle("active");
+      });
+
+      termsToggle.addEventListener("click", () => {
+        termsDetails.classList.toggle("active");
       });
     </script>
   </body>
